--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-toolbar></app-toolbar>
-<app-calendar></app-calendar>
-<app-calendario></app-calendario>
 
+<app-sidenav></app-sidenav>
 <router-outlet> </router-outlet>
