--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-toolbar></app-toolbar>
 
+<!--<app-giornata></app-giornata>-->
+
 <app-sidenav></app-sidenav>
 <router-outlet> </router-outlet>
