--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -2,12 +2,20 @@
 <mat-sidenav-container class="example-container" autosize>
   <mat-sidenav #sidenav class="example-sidenav" mode="side" opened="true" (mouseenter)="mouseenter()" (mouseleave)="mouseleave()">
     <mat-nav-list>
+
+      <mat-list-item (click)="showSubSubMenu = !showSubSubMenu" class="parent">
+        <span class="full-width" *ngIf="isExpanded || isShowing">Classifica</span>
+        <mat-icon class="menu-button" [ngClass]="{'rotated' : showSubSubMenu}" *ngIf="isExpanded || isShowing"></mat-icon>
+      </mat-list-item>
+
       <mat-list-item (click)="showSubmenu = !showSubmenu" class="parent">
         <span class="full-width" *ngIf="isExpanded || isShowing">Calendario</span>
 
 
+
         <mat-icon class="menu-button" [ngClass]="{'rotated' : showSubmenu}" *ngIf="isExpanded || isShowing">expand_more</mat-icon>
       </mat-list-item>
+
       <div class="submenu" [ngClass]="{'expanded' : showSubmenu}" *ngIf="isShowing || isExpanded">
         <a mat-list-item href="...">Giornata 4</a>
         <a mat-list-item href="...">Giornata 5</a>
@@ -23,23 +31,20 @@
         <a mat-list-item href="...">Giornata 15</a>
 
 
-        <mat-list-item (click)="showSubSubMenu = !showSubSubMenu" class="parent">
-          <span class="full-width" *ngIf="isExpanded || isShowing">Nested Menu</span>
-          <mat-icon class="menu-button" [ngClass]="{'rotated' : showSubSubMenu}" *ngIf="isExpanded || isShowing">expand_more</mat-icon>
-        </mat-list-item>
-
         <div class="submenu" [ngClass]="{'expanded' : showSubSubMenu}" *ngIf="isShowing || isExpanded">
           <mat-list-item>SubSubmenu Item 1</mat-list-item>
           <mat-list-item>SubSubmenu Item 2</mat-list-item>
         </div>
       </div>
+
     </mat-nav-list>
     <mat-nav-list>
+
     </mat-nav-list>
   </mat-sidenav>
 
   <div class="example-sidenav-content">
-    Main content that resizes properly
+    dadas
   </div>
 
 </mat-sidenav-container>
